desenv_tests/test-assets/field/failure/default_env_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(default(env(value = "1")))]
    field: String
}

fn main(){}